# ChangeLog for dev-python/pygeoip
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Apr 2015; Johann Schmitz <ercpe@gentoo.org> pygeoip-1.3.2.ebuild:
  Block dev-python/geoip-python

*pygeoip-1.3.2 (04 Jan 2015)

  04 Jan 2015; Johann Schmitz <ercpe@gentoo.org> +metadata.xml,
  +pygeoip-1.3.2.ebuild:
  new ebuild for pygeoip