@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>ercpe@gentoo.org</email>
-		<name>Johann Schmitz (ercpe)</name>
-	</maintainer>
+  <maintainer>
+    <email>ercpe@gentoo.org</email>
+    <name>Johann Schmitz (ercpe)</name>
+  </maintainer>
+  <upstream>
+    <remote-id type="github">maxmind/geoip-api-python</remote-id>
+  </upstream>
 </pkgmetadata>
-
